ifcbdb/assets/css/site.css
html,
body,
.view {
    height: 100%;
}

body {
    padding-top: 45px
}

.navbar {
    min-height: 15px;
}

.navbar-brand {
    padding: 0 5px;
}

.navbar.scrolling-navbar,
.navbar.scrolling-navbar.top-nav-collapse {
    padding: 0;
}

.page-footer {
    background-color: #929FBA;
}

.footer-thumb {
    max-height: 60px;
    margin: 0 8px;
}

@keyframes waver {
    0% {
        border-radius: 2px;
    }
    100% {
        border-radius: 20px;
    }
}

.loading {
    text-align: center;
    font-size: 0.8em;
    background: #e9e9e9;
    position: relative;
    opacity: 0.5;
    height: 600px;
}

.loader,
.loader::before,
.loader::after {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border: solid 3px transparent;
}

.loader {
    border-bottom-color: #35008b;
    margin: auto;
    margin-bottom: 10px;
    text-align: center;
    animation: waver 1s infinite alternate ease-in-out;
    position: relative;
}

.loader::before,
.loader::after {
    content: '';
    display: block;
    position: absolute;
}

.loader::before {
    border-bottom-color: #35008b;
    left: -28px;
    top: -3px;
    animation: waver 1s infinite alternate ease-in-out;
}

.loader::after {
    border-bottom-color: #35008b;
    left: 23px;
    top: -3px;
    animation: waver 1s infinite alternate ease-in-out;
}

.ts-plot-container {
    height: 12vmax;
    min-height: 200px;
}

.card.h500 {
    max-height: 500px;
}

.card.h600 {
    max-height: 600px;
}

